tests/ui/issues/issue-11771.stderr
error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/issue-11771.rs:3:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             <isize as Add>
             <isize as Add<&isize>>
             <i8 as Add>
             <i8 as Add<&i8>>
             <i16 as Add>
             <i16 as Add<&i16>>
             <i32 as Add>
             <i32 as Add<&i32>>
           and 48 others

error[E0277]: cannot add `()` to `{integer}`
  --> $DIR/issue-11771.rs:8:7
   |
LL |     1 +
   |       ^ no implementation for `{integer} + ()`
   |
   = help: the trait `Add<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             <isize as Add>
             <isize as Add<&isize>>
             <i8 as Add>
             <i8 as Add<&i8>>
             <i16 as Add>
             <i16 as Add<&i16>>
             <i32 as Add>
             <i32 as Add<&i32>>
           and 48 others

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
